larger chunks of gutenberg, verb with particles

--- a/notebooks/mining_gutenberg_for_all_relations.ipynb
+++ b/notebooks/mining_gutenberg_for_all_relations.ipynb
@@ -207,7 +207,10 @@
     {
      "data": {
       "text/plain": [
-       "[('small', 'frogs', 2), ('only', 'ones', 2), ('blue', 'bird', 1)]"
+       "[('diving', 'bell', 1),\n",
+       " ('small', 'frogs', 2),\n",
+       " ('only', 'ones', 2),\n",
+       " ('blue', 'bird', 1)]"
       ]
      },
      "execution_count": 8,
@@ -226,14 +229,14 @@
     "        #print(token,token.dep_,token.pos_)\n",
     "#         try: \n",
     "        if token.dep_==\"amod\":  ## try to see if it is an `amod`, an adjective\n",
-    "            if token.pos_==\"ADJ\":\n",
+    "            if token.tag_==\"JJ\":\n",
     "                if token.head.tag_ in nouns:  ## try to see if the head is a noun\n",
     "                    adj_noun_tuples.append((token.text.lower(),token.head.text.lower(),1 if token.head.tag_==\"NN\" else 2)) ## add the modifying word and the lemma \n",
     "#         except:\n",
     "#             pass\n",
     "    return adj_noun_tuples\n",
     "                                       \n",
-    "extract_adj2nouns(nlp(\"Frogs and small frogs were not the only ones there, in the blue bird of the blue house.  The smiling dog walked itself through the house.\"))"
+    "extract_adj2nouns(nlp(\"The diving bell gave off the sound. Frogs and small frogs were not the only ones there, in the blue bird of the blue house.  The smiling dog walked itself through the house.\"))"
    ]
   },
   {
@@ -244,7 +247,10 @@
     {
      "data": {
       "text/plain": [
-       "[('man', 'eat', 1), ('tree', 'bear', 1), ('dog', 'eat', 1)]"
+       "[('bell', 'give off', 1),\n",
+       " ('man', 'eat', 1),\n",
+       " ('tree', 'bear', 1),\n",
+       " ('dog', 'eat', 1)]"
       ]
      },
      "execution_count": 9,
@@ -269,14 +275,20 @@
     "            if verb.pos_ == \"VERB\":  ## ...\n",
     "                verb_children_deps = [c.dep_ for c in verb.children] ## make sure one of its deps has a dobj dependency\n",
     "                if \"dobj\" in verb_children_deps:\n",
-    "                    obj = [c for c in verb.children if c.dep_==\"dobj\"][0] ## just get the last one\n",
-    "                    noun2verbs.append((token.text.lower(),verb.lemma_,1 if token.tag_==\"NN\" else 2))# just noun and the verb lemma #obj.text.lower())) ## get the lemma, lemmatized verb, and nonlematized object\n",
+    "                    #obj = [c for c in verb.children if c.dep_==\"dobj\"][0] ## just get the last one\n",
+    "                    particles = [c for c in verb.children if c.dep_==\"prt\"]\n",
+    "                    #print(particles)\n",
+    "                    if particles==[]:\n",
+    "                        verb_to_return = verb.lemma_\n",
+    "                    else:\n",
+    "                        verb_to_return = verb.lemma_+\" \"+particles[0].text.lower()\n",
+    "                    noun2verbs.append((token.text.lower(),verb_to_return,1 if token.tag_==\"NN\" else 2))# just noun and the verb lemma #obj.text.lower())) ## get the lemma, lemmatized verb, and nonlematized object\n",
     "#         except:\n",
     "#             pass\n",
     "    return noun2verbs\n",
     "\n",
     "\n",
-    "extract_noun2verb(nlp(\"8:4 And the ark rested in the seventh month, on the seventeenth day of\\\n",
+    "extract_noun2verb(nlp(\" The diving bell gave off a sound. And the ark rested in the seventh month, on the seventeenth day of\\\n",
     "the month, upon the mountains of Ararat.And the ark rested in the seventh month, on the seventeenth day of the month, upon the mountains of Ararat. He swung through the fence.  The men circling the house. While running down the street, the man ate apples from a cart. The tree bore fruit and lemons. The dog who ran through the night ate chicken through the night.  The woods are on fire.\"))"
    ]
   },
@@ -374,7 +386,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████| 31116/31116 [31:42:27<00:00,  3.67s/it]\n"
+      "100%|██████████████████████████████████| 31116/31116 [42:45:08<00:00,  4.95s/it]\n"
      ]
     }
    ],
@@ -393,7 +405,8 @@
     "        if (\"Language: English\" in tempdata[:1000] and int(filenumber) not in banned_books):  ## make sure english \n",
     "            tempdata = strip_headers(tempdata)\n",
     "            tempdata = tempdata.replace(\"\\n\",\" \") ## important! spacy does better without \\n\n",
-    "            tempspacy = nlp(tempdata[:200000])### limit to first n chars\n",
+    "            #print(len(tempdata))\n",
+    "            tempspacy = nlp(tempdata[:300000])### limit to first n chars\n",
     "            try:\n",
     "                for pp in list(set(extract_possessor_possessed(tempspacy))):\n",
     "                    possessor2possessed[pp]+=1\n",
@@ -427,16 +440,16 @@
     {
      "data": {
       "text/plain": [
-       "[(('strength', 'abundance'), 3),\n",
+       "[(('mother', 'child'), 122),\n",
+       " (('heart', 'workings'), 2),\n",
+       " (('youth', 'livery'), 6),\n",
+       " (('summer', 'flower'), 7),\n",
+       " (('woman', 'son'), 105),\n",
+       " (('friar', 'mouth'), 2),\n",
+       " (('husband', 'nose'), 20),\n",
        " (('honour', 'ring'), 2),\n",
-       " (('tongue', 'tune'), 2),\n",
-       " (('father', 'skill'), 16),\n",
-       " (('tiger', 'jaws'), 5),\n",
-       " (('winter', 'deface'), 3),\n",
-       " (('love', 'parts'), 4),\n",
-       " (('love', 'face'), 17),\n",
-       " (('eyes', 'falsehood'), 2),\n",
-       " (('husband', 'shape'), 3)]"
+       " (('botcher', 'prentice'), 1),\n",
+       " (('son', 'dearer'), 1)]"
       ]
      },
      "execution_count": 17,
@@ -456,7 +469,7 @@
     {
      "data": {
       "text/plain": [
-       "1175185"
+       "1561020"
       ]
      },
      "execution_count": 18,
@@ -476,16 +489,16 @@
     {
      "data": {
       "text/plain": [
-       "[(('holy', 'writ', 1), 8),\n",
-       " (('plausive', 'words', 2), 1),\n",
-       " (('vulgar', 'thief', 1), 6),\n",
-       " (('too', 'base', 1), 5),\n",
-       " (('cold', 'fountain', 1), 10),\n",
-       " (('mere', 'word', 1), 189),\n",
-       " (('honourable', 'service', 1), 46),\n",
-       " (('second', 'burthen', 1), 6),\n",
-       " (('obedient', 'servant', 1), 816),\n",
-       " (('antique', 'song', 1), 10)]"
+       "[(('instant', 'disaster', 1), 5),\n",
+       " (('tattered', 'loving', 1), 1),\n",
+       " (('high', 'heaven', 1), 277),\n",
+       " (('good', 'speed', 1), 596),\n",
+       " (('wild', 'boars', 2), 433),\n",
+       " (('amorous', 'surfeiter', 1), 1),\n",
+       " (('surly', 'bell', 1), 8),\n",
+       " (('foolish', 'boy', 1), 472),\n",
+       " (('sure', 'wards', 2), 2),\n",
+       " (('compelling', 'occasion', 1), 1)]"
       ]
      },
      "execution_count": 19,
@@ -505,7 +518,7 @@
     {
      "data": {
       "text/plain": [
-       "33418670"
+       "41970393"
       ]
      },
      "execution_count": 20,
@@ -525,16 +538,16 @@
     {
      "data": {
       "text/plain": [
-       "[(('grace', 'kill', 1), 2),\n",
-       " (('child', 'sum', 1), 4),\n",
-       " (('world', 'see', 1), 715),\n",
-       " (('thou', 'find', 1), 132),\n",
-       " (('unworthiness', 'raise', 1), 1),\n",
-       " (('dreams', 'show', 2), 11),\n",
-       " (('truth', 'need', 1), 27),\n",
-       " (('death', 'do', 1), 112),\n",
-       " (('ear', 'confound', 1), 4),\n",
-       " (('beauty', 'hold', 1), 44)]"
+       "[(('body', 'require', 1), 69),\n",
+       " (('art', 'ransom', 1), 2),\n",
+       " (('eyes', 'teach', 2), 14),\n",
+       " (('time', 'bring on', 1), 6),\n",
+       " (('buds', 'doth', 2), 2),\n",
+       " (('mother', 'fetch', 1), 16),\n",
+       " (('sense', 'save', 1), 72),\n",
+       " (('quails', 'Beat', 2), 4),\n",
+       " (('mind', 'drink up', 1), 4),\n",
+       " (('violet', 'chide', 1), 1)]"
       ]
      },
      "execution_count": 21,
@@ -554,7 +567,7 @@
     {
      "data": {
       "text/plain": [
-       "4961751"
+       "6658234"
       ]
      },
      "execution_count": 22,
@@ -575,7 +588,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "475435"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len((list(possessor2possessed.items())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,28 +621,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5389214"
+       "6132913"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adj2nouns_tuples_items = list(adj2noun_tuples.items())\n",
+    "adj2nouns_tuples_items = list(adj2nouns_tuples.items())\n",
     "len(adj2nouns_tuples_items)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,16 +651,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2126931"
+       "2474844"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +684,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2067993"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(noun2verb_tuples.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
