moving around files, removing count files (too big)

--- a/notebooks/processing_adj_noun_pairs.ipynb
+++ b/notebooks/processing_adj_noun_pairs.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -21,41 +21,14 @@
     "id": "4QAPt3jvSBfk",
     "outputId": "74d35d62-7731-47c2-946a-d540b982ee80"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2022-08-12 10:47:50--  https://github.com/kbooten/ekphrasisgym/blob/main/adj2nouns_tuples_with_count.json?raw=true\n",
-      "Resolving github.com (github.com)... 140.82.114.3\n",
-      "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://github.com/kbooten/ekphrasisgym/raw/main/adj2nouns_tuples_with_count.json [following]\n",
-      "--2022-08-12 10:47:50--  https://github.com/kbooten/ekphrasisgym/raw/main/adj2nouns_tuples_with_count.json\n",
-      "Reusing existing connection to github.com:443.\n",
-      "HTTP request sent, awaiting response... 302 Found\n",
-      "Location: https://media.githubusercontent.com/media/kbooten/ekphrasisgym/main/adj2nouns_tuples_with_count.json [following]\n",
-      "--2022-08-12 10:47:50--  https://media.githubusercontent.com/media/kbooten/ekphrasisgym/main/adj2nouns_tuples_with_count.json\n",
-      "Resolving media.githubusercontent.com (media.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.108.133, ...\n",
-      "Connecting to media.githubusercontent.com (media.githubusercontent.com)|185.199.109.133|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 68155446 (65M) [application/octet-stream]\n",
-      "Saving to: ‘adj2nouns_tuples_with_count.json?raw=true.2’\n",
-      "\n",
-      "adj2nouns_tuples_wi 100%[===================>]  65.00M   189MB/s    in 0.3s    \n",
-      "\n",
-      "2022-08-12 10:47:50 (189 MB/s) - ‘adj2nouns_tuples_with_count.json?raw=true.2’ saved [68155446/68155446]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! wget https://github.com/kbooten/ekphrasisgym/blob/main/adj2nouns_tuples_with_count.json?raw=true"
+    "#! wget https://github.com/kbooten/ekphrasisgym/blob/main/adj2nouns_tuples_with_count.json?raw=true"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "t8Lo-ixmSHRY"
    },
@@ -63,13 +36,13 @@
    "source": [
     "import json\n",
     "\n",
-    "with open('adj2nouns_tuples_with_count.json?raw=true','r') as f:\n",
+    "with open('adj2nouns_tuples_with_count.json','r') as f:\n",
     "  adj2noun_tuples_with_count = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -81,10 +54,10 @@
     {
      "data": {
       "text/plain": [
-       "[[['holy', 'writ', 1], 8],\n",
-       " [['vulgar', 'thief', 1], 6],\n",
-       " [['too', 'base', 1], 5],\n",
-       " [['cold', 'fountain', 1], 10]]"
+       "[[['instant', 'disaster', 1], 5],\n",
+       " [['high', 'heaven', 1], 277],\n",
+       " [['good', 'speed', 1], 596],\n",
+       " [['wild', 'boars', 2], 433]]"
       ]
      },
      "execution_count": 3,
@@ -98,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -111,11 +84,12 @@
      "data": {
       "text/plain": [
        "[['little', 'sherbet', 1],\n",
-       " ['rich', 'sherbet', 1],\n",
-       " ['excellent', 'sherbet', 1],\n",
-       " ['exquisite', 'sherbet', 1],\n",
-       " ['turkish', 'sherbet', 1],\n",
        " ['iced', 'sherbet', 1],\n",
+       " ['rich', 'sherbet', 1],\n",
+       " ['exquisite', 'sherbet', 1],\n",
+       " ['excellent', 'sherbet', 1],\n",
+       " ['turkish', 'sherbet', 1],\n",
+       " ['frozen', 'sherbet', 1],\n",
        " ['nice', 'sherbet', 1],\n",
        " ['pink', 'sherbet', 1],\n",
        " ['cool', 'sherbet', 1],\n",
@@ -142,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -155,9 +129,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+      "[nltk_data] Downloading package wordnet to /Users/kyle/nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Downloading package omw-1.4 to /root/nltk_data...\n",
+      "[nltk_data] Downloading package omw-1.4 to /Users/kyle/nltk_data...\n",
       "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
      ]
     }
@@ -171,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -197,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "b2s4aqMGZRlK"
    },
@@ -210,13 +184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "aPYQXHMMTz7O"
    },
    "outputs": [],
    "source": [
-    "min_count = 3\n",
+    "min_count = 4\n",
     "\n",
     "for tup,count in adj2noun_tuples_with_count:\n",
     "  adj,noun,num = tup\n",
@@ -238,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "Dy_iJ3aPPfhB"
    },
@@ -250,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -285,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "IzPENNgYPt5b"
    },
@@ -306,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "2CiZ-rGQyUH5"
    },
@@ -317,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -329,7 +303,7 @@
     {
      "data": {
       "text/plain": [
-       "26487"
+       "25092"
       ]
      },
      "execution_count": 13,
@@ -344,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "QbDvRQjPPD7t"
    },
@@ -357,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "89VhYJGLO7Sp"
    },
@@ -371,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -397,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "rp-8uHtIQY6N"
    },
@@ -408,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "At0wCZGvQERF"
    },
@@ -454,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "lWcjXauhkipF"
    },
@@ -465,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "Max1WCJHksI5"
    },
@@ -481,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "gSVxcI4ygGnB"
    },
@@ -500,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -513,26 +487,26 @@
      "data": {
       "text/plain": [
        "{'num': '1',\n",
-       " 'verbs': [('mirthless', 16.38184961527223),\n",
-       "  ('screechy', 5.15963767410149),\n",
-       "  ('hearty', 3.454865496644985),\n",
-       "  ('hysteric', 3.095782604460894),\n",
-       "  ('forced', 2.8729800685337845),\n",
-       "  ('sneering', 2.8294787245072683),\n",
-       "  ('ringing', 2.735497559976221),\n",
-       "  ('unmirthful', 2.579818837050745),\n",
-       "  ('derisive', 2.013040456183536),\n",
-       "  ('scornful', 1.9997412287198082),\n",
-       "  ('vexed', 1.8058731859355213),\n",
-       "  ('tinkling', 1.7198792247004968),\n",
-       "  ('grating', 1.6868046242254873),\n",
-       "  ('embarrassed', 1.6256392671826614),\n",
-       "  ('rippling', 1.6123867731567156),\n",
-       "  ('maniacal', 1.5765559559754554),\n",
-       "  ('loud', 1.5674406736614133),\n",
-       "  ('infectious', 1.339521319237887),\n",
-       "  ('merry', 1.3359118942217125),\n",
-       "  ('sardonic', 1.329598939095384)]}"
+       " 'verbs': [('mirthless', 18.81848862802641),\n",
+       "  ('unforced', 3.6818782098312544),\n",
+       "  ('forced', 3.4235007915974824),\n",
+       "  ('hearty', 3.3002829892044865),\n",
+       "  ('hysteric', 3.0682318415260457),\n",
+       "  ('sneering', 3.0572738706634524),\n",
+       "  ('rippling', 2.761408657373441),\n",
+       "  ('unmirthful', 2.761408657373441),\n",
+       "  ('ringing', 2.680665714175387),\n",
+       "  ('grating', 2.09197625558594),\n",
+       "  ('vexed', 2.0710564930300808),\n",
+       "  ('derisive', 2.0016560109003247),\n",
+       "  ('scornful', 1.9082905355832722),\n",
+       "  ('screechy', 1.8409391049156272),\n",
+       "  ('unconvincing', 1.8409391049156272),\n",
+       "  ('embarrassed', 1.678503301540719),\n",
+       "  ('loud', 1.5284741931902024),\n",
+       "  ('hysterical', 1.3716801173881144),\n",
+       "  ('gleeful', 1.3648341639891721),\n",
+       "  ('merry', 1.3386096845194424)]}"
       ]
      },
      "execution_count": 22,
@@ -546,19 +520,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "NbdOyTd0m2RS"
    },
    "outputs": [],
    "source": [
-    "with open('noun2adjs_and_weights.json','w') as f:\n",
+    "with open('../noun2adjs_and_weights.json','w') as f:\n",
     "  json.dump(noun2adjs_and_weights_reformatted,f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -567,75 +541,10 @@
     "id": "xx8H32zrrMIG",
     "outputId": "e686d76e-bd06-47e4-d15c-a5142c200f33"
    },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "    async function download(id, filename, size) {\n",
-       "      if (!google.colab.kernel.accessAllowed) {\n",
-       "        return;\n",
-       "      }\n",
-       "      const div = document.createElement('div');\n",
-       "      const label = document.createElement('label');\n",
-       "      label.textContent = `Downloading \"${filename}\": `;\n",
-       "      div.appendChild(label);\n",
-       "      const progress = document.createElement('progress');\n",
-       "      progress.max = size;\n",
-       "      div.appendChild(progress);\n",
-       "      document.body.appendChild(div);\n",
-       "\n",
-       "      const buffers = [];\n",
-       "      let downloaded = 0;\n",
-       "\n",
-       "      const channel = await google.colab.kernel.comms.open(id);\n",
-       "      // Send a message to notify the kernel that we're ready.\n",
-       "      channel.send({})\n",
-       "\n",
-       "      for await (const message of channel.messages) {\n",
-       "        // Send a message to notify the kernel that we're ready.\n",
-       "        channel.send({})\n",
-       "        if (message.buffers) {\n",
-       "          for (const buffer of message.buffers) {\n",
-       "            buffers.push(buffer);\n",
-       "            downloaded += buffer.byteLength;\n",
-       "            progress.value = downloaded;\n",
-       "          }\n",
-       "        }\n",
-       "      }\n",
-       "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-       "      const a = document.createElement('a');\n",
-       "      a.href = window.URL.createObjectURL(blob);\n",
-       "      a.download = filename;\n",
-       "      div.appendChild(a);\n",
-       "      a.click();\n",
-       "      div.remove();\n",
-       "    }\n",
-       "  "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "download(\"download_9b506a31-1cd7-4f2c-93f1-df6d4db2a1f8\", \"noun2adjs_and_weights.json\", 10210548)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from google.colab import files\n",
-    "files.download('/content/noun2adjs_and_weights.json')"
+    "# from google.colab import files\n",
+    "# files.download('/content/noun2adjs_and_weights.json')"
    ]
   },
   {
