removing count but not from local

--- a/notebooks/processing_adj_noun_pairs.ipynb
+++ b/notebooks/processing_adj_noun_pairs.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -357,16 +357,16 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "6140"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "word2doc_count['eat']"
+    "word2doc_count['small']"
    ]
   },
   {
@@ -469,7 +469,7 @@
     "  key,num = key.split(\"~\")\n",
     "  noun2adjs_and_weights_reformatted[key]={}\n",
     "  noun2adjs_and_weights_reformatted[key][\"num\"]=num\n",
-    "  noun2adjs_and_weights_reformatted[key][\"verbs\"]=values"
+    "  noun2adjs_and_weights_reformatted[key][\"adjs\"]=values"
    ]
   },
   {
@@ -487,21 +487,21 @@
      "data": {
       "text/plain": [
        "{'num': '1',\n",
-       " 'verbs': [('mirthless', 18.81848862802641),\n",
+       " 'adjs': [('mirthless', 18.81848862802641),\n",
        "  ('unforced', 3.6818782098312544),\n",
        "  ('forced', 3.4235007915974824),\n",
        "  ('hearty', 3.3002829892044865),\n",
        "  ('hysteric', 3.0682318415260457),\n",
        "  ('sneering', 3.0572738706634524),\n",
-       "  ('rippling', 2.761408657373441),\n",
        "  ('unmirthful', 2.761408657373441),\n",
+       "  ('rippling', 2.761408657373441),\n",
        "  ('ringing', 2.680665714175387),\n",
        "  ('grating', 2.09197625558594),\n",
        "  ('vexed', 2.0710564930300808),\n",
        "  ('derisive', 2.0016560109003247),\n",
        "  ('scornful', 1.9082905355832722),\n",
-       "  ('screechy', 1.8409391049156272),\n",
        "  ('unconvincing', 1.8409391049156272),\n",
+       "  ('screechy', 1.8409391049156272),\n",
        "  ('embarrassed', 1.678503301540719),\n",
        "  ('loud', 1.5284741931902024),\n",
        "  ('hysterical', 1.3716801173881144),\n",
