--- a/notebooks/processing_adj_noun_pairs.ipynb
+++ b/notebooks/processing_adj_noun_pairs.ipynb
@@ -190,7 +190,7 @@
    },
    "outputs": [],
    "source": [
-    "min_count = 4\n",
+    "min_count = 6\n",
     "\n",
     "for tup,count in adj2noun_tuples_with_count:\n",
     "  adj,noun,num = tup\n",
@@ -303,7 +303,7 @@
     {
      "data": {
       "text/plain": [
-       "25092"
+       "21149"
       ]
      },
      "execution_count": 13,
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -357,10 +357,10 @@
     {
      "data": {
       "text/plain": [
-       "6140"
+       "4927"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -487,35 +487,35 @@
      "data": {
       "text/plain": [
        "{'num': '1',\n",
-       " 'adjs': [('mirthless', 18.81848862802641),\n",
-       "  ('unforced', 3.6818782098312544),\n",
-       "  ('forced', 3.4235007915974824),\n",
-       "  ('hearty', 3.3002829892044865),\n",
-       "  ('hysteric', 3.0682318415260457),\n",
-       "  ('sneering', 3.0572738706634524),\n",
-       "  ('unmirthful', 2.761408657373441),\n",
-       "  ('rippling', 2.761408657373441),\n",
-       "  ('ringing', 2.680665714175387),\n",
-       "  ('grating', 2.09197625558594),\n",
-       "  ('vexed', 2.0710564930300808),\n",
-       "  ('derisive', 2.0016560109003247),\n",
-       "  ('scornful', 1.9082905355832722),\n",
-       "  ('unconvincing', 1.8409391049156272),\n",
-       "  ('screechy', 1.8409391049156272),\n",
-       "  ('embarrassed', 1.678503301540719),\n",
-       "  ('loud', 1.5284741931902024),\n",
-       "  ('hysterical', 1.3716801173881144),\n",
-       "  ('gleeful', 1.3648341639891721),\n",
-       "  ('merry', 1.3386096845194424)]}"
+       " 'adjs': [('custom', 135.6476999407411),\n",
+       "  ('tumble', 3.440340215888361),\n",
+       "  ('forcing', 3.194601629039192),\n",
+       "  ('doss', 2.9488630421900233),\n",
+       "  ('roomed', 2.1063307444214456),\n",
+       "  ('eaved', 2.0887779882179336),\n",
+       "  ('charnal', 1.965908694793349),\n",
+       "  ('shebeen', 1.965908694793349),\n",
+       "  ('boardin', 1.965908694793349),\n",
+       "  ('banqueting', 1.8430394013687648),\n",
+       "  ('furnished', 1.6433767995538153),\n",
+       "  ('gabled', 1.3379100839565847),\n",
+       "  ('storied', 1.2876701950896436),\n",
+       "  ('untenanted', 1.228692934245843),\n",
+       "  ('haunted', 1.1385887857344814),\n",
+       "  ('precinct', 1.105823640821259),\n",
+       "  ('halfway', 1.0239107785382027),\n",
+       "  ('bawdy', 0.9829543473966745),\n",
+       "  ('dwelling', 0.9829543473966745),\n",
+       "  ('tumbledown', 0.9829543473966745)]}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "noun2adjs_and_weights_reformatted[\"laugh\"]"
+    "noun2adjs_and_weights_reformatted[\"house\"]"
    ]
   },
   {
